test: #38 Unit tests for consul integration package (#53)
* test: #38 Unit tests refactoring

* test: #38 Unit tests for consul integration package