@@ -3,27 +3,31 @@ package org.qubership.integration.platform.engine.camel.converters;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.apache.camel.TypeConversionException;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayNameGeneration;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.qubership.integration.platform.engine.forms.FormData;
 import org.qubership.integration.platform.engine.testutils.DisplayNameUtils;
+import org.qubership.integration.platform.engine.testutils.ObjectMappers;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertInstanceOf;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.*;
 
 @ExtendWith(MockitoExtension.class)
 @DisplayNameGeneration(DisplayNameUtils.ReplaceCamelCase.class)
 class FormDataConverterTest {
 
-    private final ObjectMapper objectMapper = new ObjectMapper();
+    private FormDataConverter converter;
+
+    @BeforeEach
+    void setUp() {
+        ObjectMapper objectMapper = ObjectMappers.getObjectMapper();
+        converter = new FormDataConverter(objectMapper);
+    }
 
     @Test
-    void shouldConvertJsonStringToFormData() throws Exception {
-        FormDataConverter converter = new FormDataConverter(objectMapper);
-
+    void shouldConvertJsonStringToFormData() {
         String json = """
                 [
                   {
@@ -42,21 +46,19 @@ class FormDataConverterTest {
 
         assertEquals(2, result.getEntries().size());
 
-        assertEquals("username", result.getEntries().get(0).getName());
-        assertEquals("bob", result.getEntries().get(0).getValue());
-        assertEquals(null, result.getEntries().get(0).getFileName());
-        assertEquals(null, result.getEntries().get(0).getMimeType());
+        assertEquals("username", result.getEntries().getFirst().getName());
+        assertEquals("bob", result.getEntries().getFirst().getValue());
+        assertNull(result.getEntries().getFirst().getFileName());
+        assertNull(result.getEntries().getFirst().getMimeType());
 
         assertEquals("document", result.getEntries().get(1).getName());
         assertEquals("resume.txt", result.getEntries().get(1).getFileName());
         assertEquals("file-content", result.getEntries().get(1).getValue());
-        assertEquals(null, result.getEntries().get(1).getMimeType());
+        assertNull(result.getEntries().get(1).getMimeType());
     }
 
     @Test
-    void shouldConvertNonStringValueUsingStringValueOf() throws Exception {
-        FormDataConverter converter = new FormDataConverter(objectMapper);
-
+    void shouldConvertNonStringValueUsingStringValueOf() {
         Object value = new Object() {
             @Override
             public String toString() {
@@ -74,16 +76,14 @@ class FormDataConverterTest {
         FormData result = converter.convert(value);
 
         assertEquals(1, result.getEntries().size());
-        assertEquals("email", result.getEntries().get(0).getName());
-        assertEquals("bob@example.com", result.getEntries().get(0).getValue());
-        assertEquals(null, result.getEntries().get(0).getFileName());
-        assertEquals(null, result.getEntries().get(0).getMimeType());
+        assertEquals("email", result.getEntries().getFirst().getName());
+        assertEquals("bob@example.com", result.getEntries().getFirst().getValue());
+        assertNull(result.getEntries().getFirst().getFileName());
+        assertNull(result.getEntries().getFirst().getMimeType());
     }
 
     @Test
     void shouldThrowTypeConversionExceptionWhenJsonIsInvalid() {
-        FormDataConverter converter = new FormDataConverter(objectMapper);
-
         TypeConversionException exception = assertThrows(
                 TypeConversionException.class,
                 () -> converter.convert("not-a-json")
